--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </p>
         </main>
         <footer style="background-color: black;color:white">
-            <p>Это подвал</p>
+            <p>Это подвал!</p>
         </footer>
     </body>
 </html>
