--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <header style="background-color: black;color:white">
             <h1>Это шапка сайта<br></h1>
